--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,15 +12,15 @@
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
-    tools:context=".MainActivity"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context="com.example.movieproapp.MainActivity"
     tools:showIn="@layout/activity_main"
     android:layout_marginTop="15dp">
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/rvMovie"
+        android:id="@+id/rvMovies"
         android:clipToPadding="false"
         android:scrollbars="vertical"/>
 </RelativeLayout>
